--- a/src/monitoramento/Dockerfile
+++ b/src/monitoramento/Dockerfile
@@ -4,10 +4,7 @@ WORKDIR /app
 
 # Instala dependências do sistema
 RUN apt-get update && apt-get install -y \
-<<<<<<< HEAD
-=======
     build-essential \
->>>>>>> origin/main
     gcc \
     python3-dev \
     && rm -rf /var/lib/apt/lists/*
@@ -24,18 +21,14 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Copia o código
 COPY . .
 
-<<<<<<< HEAD
-EXPOSE 8080
-
-CMD ["uvicorn", "monitoramento:app", "--host", "0.0.0.0", "--port", "8080"]
-=======
+# Cria diretórios necessários
 RUN mkdir -p /app/logs /app/visualizacoes /app/templates && \
     chmod 777 /app/logs /app/visualizacoes /app/templates
 
+# Configura variáveis de ambiente
 ENV LOG_LEVEL=INFO
 ENV LOG_FILE=/app/logs/monitoramento.log
 
 EXPOSE 8080
 
-CMD ["python", "monitoramento.py"]
->>>>>>> origin/main
+CMD ["uvicorn", "monitoramento:app", "--host", "0.0.0.0", "--port", "8080"]
