--- a/src/diagnostico/Dockerfile
+++ b/src/diagnostico/Dockerfile
@@ -4,10 +4,7 @@ WORKDIR /app
 
 # Instala dependências do sistema
 RUN apt-get update && apt-get install -y \
-<<<<<<< HEAD
-=======
     build-essential \
->>>>>>> origin/main
     gcc \
     python3-dev \
     && rm -rf /var/lib/apt/lists/*
@@ -16,33 +13,21 @@ RUN apt-get update && apt-get install -y \
 ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
 ENV PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
-<<<<<<< HEAD
-
-# Copia e instala dependências Python
-COPY requirements.txt .
-RUN pip install --upgrade pip && \
-=======
 ENV LOG_LEVEL=INFO
 ENV LOG_FILE=/app/logs/diagnostico.log
 
 # Copia e instala dependências Python
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip && \
->>>>>>> origin/main
     pip install --no-cache-dir -r requirements.txt
 
 # Copia o código
 COPY . .
 
-<<<<<<< HEAD
-EXPOSE 8081
-
-CMD ["python", "-u", "diagnostico.py"]
-=======
+# Cria diretórios necessários
 RUN mkdir -p /app/logs /app/visualizacoes /app/templates && \
     chmod 777 /app/logs /app/visualizacoes /app/templates
 
 EXPOSE 8080
 
 CMD ["python", "diagnostico.py"]
->>>>>>> origin/main
