Atualizar Dockerfile do RollbackOperator para remover a opção '-mod=readonly' na construção do binário. Essa alteração visa simplificar o processo de compilação e melhorar a eficiência do ambiente de desenvolvimento.

--- a/kubernetes/operators/RollbackOperator/Dockerfile
+++ b/kubernetes/operators/RollbackOperator/Dockerfile
@@ -13,7 +13,7 @@ RUN mkdir -p /go/src/autocura && \
 WORKDIR /go/src/autocura/RollbackOperator
 
 # Compilar
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=readonly -a -o /workspace/rollback-operator main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o /workspace/rollback-operator main.go
 
 # Imagem final
 FROM alpine:3.16
