Atualizar Dockerfile do RollbackOperator para simplificar o processo de construção, removendo a cópia do código-fonte para um diretório específico do Go e ajustando a saída da compilação para o binário correto. Essa modificação visa melhorar a eficiência e a organização do projeto.

--- a/kubernetes/operators/RollbackOperator/Dockerfile
+++ b/kubernetes/operators/RollbackOperator/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /workspace
 COPY go.mod go.sum ./
 RUN go mod download
 
+# Listar arquivos no diretório atual
+RUN ls -la
+
 # Copiar todo o código-fonte para o caminho esperado pelo Go
 RUN mkdir -p /go/src/autocura && \
     cp -r . /go/src/autocura/RollbackOperator && \
