--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,13 @@ python-json-logger==2.0.7
 gunicorn==21.2.0
 pytest==8.0.2
 pytest-cov==4.1.0
+pytest-asyncio==0.23.5
+pytest-mock==3.12.0
 black==24.2.0
 flake8==7.0.0
 mypy==1.8.0
+isort==5.13.2
+bandit==1.7.7
 dataclasses>=0.6
 typing>=3.7.4.3
 fastapi>=0.68.0
