--- a/src/will/requirements.txt
+++ b/src/will/requirements.txt
@@ -1,26 +1,57 @@
-Flask>=2.0
-python-json-logger>=2.0
-gunicorn>=20.0
-requests>=2.26.0
-python-dotenv>=0.19.0
-pytest>=6.2.5
-pytest-asyncio>=0.15.1
-aiohttp>=3.8.1
-newsapi-python>=0.2.6
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=0.24.2
-tensorflow>=2.8.0
-keras>=2.8.0
-ccxt>=1.60.0
-python-binance>=1.0.15
-websocket-client>=1.2.1
-schedule>=1.1.0
-python-telegram-bot>=13.7
-prometheus-client>=0.12.0
-elasticsearch>=7.17.0
-redis>=4.0.2
-pymongo>=4.0.1
-sqlalchemy>=1.4.0
-alembic>=1.7.5
+# Web Framework
+Flask==2.3.3
+gunicorn==21.2.0
+python-dotenv==1.0.0
+
+# Logging
+python-json-logger==2.0.7
+elasticsearch==8.9.0
+
+# HTTP Client
+requests==2.31.0
+aiohttp==3.8.5
+
+# Data Processing
+pandas==2.1.0
+numpy==1.24.3
+scikit-learn==1.3.0
+
+# Machine Learning
+tensorflow==2.13.0
+keras==2.13.1
+
+# Trading
+ccxt==4.1.13
+python-binance==1.0.19
+websocket-client==1.6.1
+
+# Task Scheduling
+schedule==1.2.1
+
+# Monitoring
+prometheus-client==0.19.0
+python-telegram-bot==20.7
+
+# Database
+pymongo==4.6.1
+sqlalchemy==2.0.20
+alembic==1.12.0
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+
+# News Analysis
+newsapi-python==0.2.7
+
+# Security
+cryptography==41.0.7
+pyjwt==2.8.0
+
+# Utilities
+python-dateutil==2.8.2
+pytz==2023.3
+
+# Added from the code block
+newspaper3k==0.2.8
 
