Adicionar módulo de gerenciamento de memória compartilhada com funções para carregar, salvar, registrar e consultar dados. Este módulo visa facilitar o rastreamento de decisões, feedbacks e alertas éticos no sistema de I.A. Além disso, atualizar a API de observabilidade para incluir um endpoint de dashboard que fornece status do sistema, métricas e últimas ações realizadas.

--- a/kubernetes/components/observabilidade/kustomization.yaml
+++ b/kubernetes/components/observabilidade/kustomization.yaml
@@ -20,6 +20,8 @@ resources:
   - ingress.yaml
   - prometheus-server-pvc.yaml
   - storage-prometheus-alertmanager-0.yaml
+  - grafana-serviceaccount.yaml
+  - autocura-sa.yaml
 
 labels:
 - pairs:
