--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,86 @@
-# API e Web
+# Dependências Principais
+aiohttp==3.9.1
+asyncio==3.4.3
+pyyaml==6.0.1
+python-dotenv==1.0.0
+pydantic==2.5.2
 fastapi==0.104.1
 uvicorn==0.24.0
-websockets==12.0
-python-multipart==0.0.6
-pydantic==2.5.2
 
-# Kubernetes
-kubernetes==28.1.0
-pyyaml==6.0.1
+# Monitoramento e Observabilidade
+prometheus-client==0.19.0
+grafana-api-client==2.0.0
+elasticsearch==8.11.0
+opentelemetry-api==1.21.0
+opentelemetry-sdk==1.21.0
+opentelemetry-instrumentation-fastapi==0.42b0
+
+# Segurança
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
+cryptography==41.0.5
+python-multipart==0.0.6
 
 # Banco de Dados
-sqlite3==3.42.0
-aiosqlite==0.19.0
+sqlalchemy==2.0.23
+alembic==1.12.1
+psycopg2-binary==2.9.9
+redis==5.0.1
 
 # Processamento de Dados
 numpy==1.26.2
 pandas==2.1.3
 scikit-learn==1.3.2
-
-# Machine Learning
+tensorflow==2.15.0
 torch==2.1.1
-transformers==4.35.2
-sentence-transformers==2.2.2
 
-# Monitoramento e Logging
-prometheus-client==0.19.0
-python-json-logger==2.0.7
-structlog==23.2.0
-
-# Testes
+# Validação e Testes
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-
-# Desenvolvimento
+mypy==1.7.1
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
-mypy==1.7.1
 
 # Documentação
 mkdocs==1.5.3
 mkdocs-material==9.4.14
 mkdocstrings==0.23.0
-
-# Segurança
-cryptography==41.0.5
-python-jose==3.3.0
-passlib==1.7.4
+mkdocstrings-python==1.7.1
 
 # Utilitários
-python-dotenv==1.0.0
-tqdm==4.66.1
-rich==13.7.0 
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+pillow==10.1.0
+
+# Notificações
+slack-sdk==3.26.0
+python-telegram-bot==20.7
+smtplib3==0.0.1
+
+# Kubernetes
+kubernetes==28.1.0
+kopf==1.36.0
+
+# Logging
+structlog==23.2.0
+python-json-logger==2.0.7
+
+# Cache
+cachetools==5.3.2
+redis-cache==0.1.0
+
+# Validação Ética
+ethicml==0.3.0
+fairlearn==0.9.0
+aif360==0.5.0
+
+# Desenvolvimento
+ipython==8.18.1
+jupyter==1.0.0
+notebook==7.0.6 
