--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,12 +14,30 @@ spec:
     metadata:
       labels:
         app: autocura
+      annotations:
+        seccomp.security.alpha.kubernetes.io/pod: runtime/default
+        container.apparmor.security.beta.kubernetes.io/api: runtime/default
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: api
         image: autocura/api:latest
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          readOnlyRootFilesystem: true
         ports:
         - containerPort: 8000
+          name: http
+          protocol: TCP
         resources:
           requests:
             cpu: "100m"
@@ -32,23 +50,64 @@ spec:
           value: "INFO"
         - name: ENVIRONMENT
           value: "production"
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: OTEL_SERVICE_NAME
+          value: "autocura-api"
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: "http://opentelemetry-collector.monitoring.svc.cluster.local:4317"
+        - name: OTEL_EXPORTER_OTLP_PROTOCOL
+          value: "grpc"
+        - name: OTEL_TRACES_SAMPLER
+          value: "parentbased_traceidratio"
+        - name: OTEL_TRACES_SAMPLER_ARG
+          value: "0.1"
+        - name: OTEL_METRICS_EXPORTER
+          value: "otlp"
+        - name: OTEL_LOGS_EXPORTER
+          value: "otlp"
+        - name: OTEL_PROPAGATORS
+          value: "b3,baggage,tracecontext"
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: "service.name=autocura-api,service.version=1.0.0,deployment.environment=production"
         livenessProbe:
           httpGet:
             path: /health
-            port: 8000
+            port: http
           initialDelaySeconds: 30
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /ready
-            port: 8000
+            port: http
           initialDelaySeconds: 5
           periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
+        startupProbe:
+          httpGet:
+            path: /startup
+            port: http
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
         volumeMounts:
         - name: config
           mountPath: /app/config
+          readOnly: true
         - name: memoria
           mountPath: /app/memoria
+        - name: tmp
+          mountPath: /tmp
       - name: monitor
         image: autocura/monitor:latest
         ports:
@@ -167,6 +226,10 @@ spec:
       - name: modelos
         persistentVolumeClaim:
           claimName: autocura-modelos
+      - name: tmp
+        emptyDir:
+          medium: Memory
+          sizeLimit: 100Mi
 ---
 apiVersion: v1
 kind: Service
@@ -280,4 +343,53 @@ spec:
     name: autocura
   minReplicas: 3
   maxReplicas: 10
-  targetCPUUtilizationPercentage: 70 
+  targetCPUUtilizationPercentage: 70
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: autocura-network-policy
+  namespace: autocura
+spec:
+  podSelector:
+    matchLabels:
+      app: autocura
+  policyTypes:
+  - Ingress
+  - Egress
+  ingress:
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          name: monitoring
+    ports:
+    - protocol: TCP
+      port: 9090
+    - protocol: TCP
+      port: 8080
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          name: ingress-nginx
+    ports:
+    - protocol: TCP
+      port: 8000
+  egress:
+  - to:
+    - namespaceSelector:
+        matchLabels:
+          name: monitoring
+    ports:
+    - protocol: TCP
+      port: 9090
+  - to:
+    - ipBlock:
+        cidr: 0.0.0.0/0
+        except:
+        - 169.254.0.0/16
+        - 172.16.0.0/12
+    ports:
+    - protocol: TCP
+      port: 443
+    - protocol: TCP
+      port: 80 
