--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -10,10 +10,24 @@ resources:
 - operators/healing-operator
 - operators/rollback-operator
 - storage
+- deployment.yaml
+- components/hpa.yaml
+- monitoring/prometheus-config.yaml
+- monitoring/grafana-dashboards.yaml
+- monitoring/opentelemetry-config.yaml
+- monitoring/opentelemetry-collector.yaml
+- monitoring/grafana-business-metrics.yaml
+- monitoring/loki-config.yaml
+- monitoring/loki-deployment.yaml
+- monitoring/grafana-logs-dashboard.yaml
 
 commonLabels:
   app.kubernetes.io/part-of: autocura
   app.kubernetes.io/managed-by: kustomize
+  app: autocura
+  environment: production
+  OTEL_ENABLED: "true"
+  LOGGING_ENABLED: "true"
 
 namespace: autocura
 
@@ -44,3 +58,50 @@ podDisruptionBudget:
 # Para ambiente de produção:
 # patchesStrategicMerge:
 # - environments/production/kustomization.yaml
+
+patches:
+  - path: patches/security-context.yaml
+  - path: patches/resource-limits.yaml
+  - path: patches/resource-limits.yaml
+    target:
+      kind: Deployment
+      name: autocura
+
+configMapGenerator:
+  - name: autocura-config
+    behavior: merge
+    literals:
+      - LOG_LEVEL=INFO
+      - ENVIRONMENT=production
+      - METRICS_ENABLED=true
+      - TRACING_ENABLED=true
+      - OTEL_ENABLED=true
+
+secretGenerator:
+  - name: autocura-secrets
+    envs:
+      - .env
+    type: Opaque
+
+images:
+  - name: autocura/api
+    newName: autocura/api
+    newTag: latest
+  - name: autocura/monitor
+    newName: autocura/monitor
+    newTag: latest
+  - name: autocura/diagnostico
+    newName: autocura/diagnostico
+    newTag: latest
+  - name: autocura/gerador
+    newName: autocura/gerador
+    newTag: latest
+  - name: autocura/guardiao
+    newName: autocura/guardiao
+    newTag: latest
+  - name: autocura/observador
+    newName: autocura/observador
+    newTag: latest
+  - name: autocura/validador
+    newName: autocura/validador
+    newTag: latest
