--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Dependências Principais
-aiohttp==3.9.1
-asyncio==3.4.3
+aiohttp>=3.8.0
+asyncio>=3.4.3
 pyyaml==6.0.1
-python-dotenv==1.0.0
+python-dotenv>=0.19.0
 pydantic==2.5.2
 fastapi==0.104.1
 uvicorn==0.24.0
@@ -29,20 +29,20 @@ psycopg2-binary==2.9.9
 redis==5.0.1
 
 # Processamento de Dados
-numpy==1.26.2
-pandas==2.1.3
-scikit-learn==1.3.2
+numpy>=1.21.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
 tensorflow==2.15.0
 torch==2.1.1
 
 # Validação e Testes
-pytest==7.4.3
+pytest>=6.2.5
 pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-mypy==1.7.1
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
+pytest-cov>=2.12.1
+mypy>=0.910
+black>=21.7b0
+isort>=5.9.3
+flake8>=3.9.2
 
 # Documentação
 mkdocs==1.5.3
@@ -52,15 +52,15 @@ mkdocstrings-python==1.7.1
 
 # Utilitários
 python-dateutil==2.8.2
-pytz==2023.3
-requests==2.31.0
+pytz>=2021.1
+requests>=2.26.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
 pillow==10.1.0
 
 # Notificações
-slack-sdk==3.26.0
-python-telegram-bot==20.7
+slack-sdk>=3.11.0
+python-telegram-bot>=13.7
 smtplib3==0.0.1
 
 # Kubernetes
@@ -83,4 +83,8 @@ aif360==0.5.0
 # Desenvolvimento
 ipython==8.18.1
 jupyter==1.0.0
-notebook==7.0.6 
+notebook==7.0.6
+
+# Novas dependências
+psutil>=5.8.0
+schedule>=1.1.0 
