--- a/grafana/provisioning/dashboards/datasources.yml
+++ b/grafana/provisioning/dashboards/datasources.yml
@@ -15,4 +15,19 @@ datasources:
       manageAlerts: true
       alertmanagerUid: "alertmanager"
     secureJsonData:
-      basicAuthPassword: "" 
+      basicAuthPassword: ""
+
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    isDefault: false
+    editable: false
+    version: 1
+    jsonData:
+      maxLines: 1000
+      derivedFields:
+        - datasourceUid: prometheus
+          matcherRegex: "traceID=(\\w+)"
+          name: TraceID
+          url: "$${__value.raw}" 
