Atualizar a memória compartilhada e a documentação do sistema para refletir o progresso da Sprint 1, incluindo a conclusão e validação do módulo de autenticação multifator (MFA), desenvolvimento de endpoints de auditoria, implementação de cache básico e logging estruturado. Adicionar registros de eventos e decisões dos agentes, além de definir métricas de desempenho e conformidade com LGPD/GDPR. Essas alterações visam garantir um acompanhamento eficaz do progresso e a transparência nas operações do sistema de I.A.

--- a/grafana/provisioning/datasources/prometheus.yml
+++ b/grafana/provisioning/datasources/prometheus.yml
@@ -9,10 +9,29 @@ datasources:
     editable: false
     version: 1
     jsonData:
-      timeInterval: "15s"
-      queryTimeout: "30s"
-      httpMethod: "POST"
+      timeInterval: 5s
+      queryTimeout: 30s
+      httpMethod: POST
       manageAlerts: true
-      alertmanagerUid: "alertmanager"
+      alertmanagerUid: alertmanager
     secureJsonData:
-      basicAuthPassword: "" 
+      httpHeaderName1: "X-Scope-OrgID"
+      httpHeaderValue1: "1"
+
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    isDefault: false
+    editable: false
+    version: 1
+    jsonData:
+      maxLines: 1000
+      derivedFields:
+        - datasourceUid: prometheus
+          matcherRegex: "traceID=(\\w+)"
+          name: TraceID
+          url: "$${__value.raw}"
+    secureJsonData:
+      httpHeaderName1: "X-Scope-OrgID"
+      httpHeaderValue1: "1" 
