--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -19,21 +19,35 @@ scrape_configs:
 
   - job_name: "autocura"
     metrics_path: "/metrics"
+    scrape_interval: 5s
     static_configs:
-      - targets: ["autocura:8000"]
+      - targets: ["app:8000"]
     relabel_configs:
       - source_labels: [__address__]
         target_label: instance
-        regex: "(.*):.*"
-        replacement: "$1"
+        regex: "([^:]+):.*"
+        replacement: "${1}"
 
   - job_name: "node-exporter"
     static_configs:
       - targets: ["node-exporter:9100"]
 
+  - job_name: "redis-exporter"
+    static_configs:
+      - targets: ["redis-exporter:9121"]
+
   - job_name: "cadvisor"
     static_configs:
       - targets: ["cadvisor:8080"]
+
+  - job_name: "kube-state-metrics"
+    static_configs:
+      - targets: ["kube-state-metrics:8080"]
+
+  - job_name: "blackbox"
+    metrics_path: /metrics
+    static_configs:
+      - targets: ["blackbox-exporter:9115"]
 
   - job_name: "grafana"
     static_configs:
