Atualizar relatórios de cobertura e resultados de testes, refletindo a execução de novos testes e a validação ética das decisões. Ajustar a configuração do pytest para melhorar a execução e a coleta de dados, incluindo novos marcadores e opções de relatório. Além disso, corrigir inconsistências nos resultados de testes, garantindo que os relatórios reflitam com precisão o estado atual do sistema de I.A.

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,23 +5,19 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Marcadores
-markers =
-    unit: Testes unitários
-    integration: Testes de integração
-    slow: Testes que demoram mais para executar
-    api: Testes que dependem de API externa
-    db: Testes que dependem de banco de dados
-
-# Configurações de cobertura
+# Configurações de execução
 addopts = 
     --verbose
+    --tb=long
     --cov=src
-    --cov-report=term-missing
     --cov-report=html
+    --cov-report=term-missing
     --cov-report=xml
-    --junitxml=test-results.xml
-    --html=test-report.html
+    --cov-fail-under=80
+    --durations=10
+    --maxfail=3
+    --junitxml=test-results/junit.xml
+    --html=test-results/report.html
 
 # Configurações de logging
 log_cli = true
@@ -29,13 +25,38 @@ log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 
-# Configurações de timeout
-timeout = 300
+# Configurações de markers
+markers =
+    unit: Testes unitários
+    integration: Testes de integração
+    e2e: Testes end-to-end
+    slow: Testes que demoram mais para executar
+    async: Testes assíncronos
+    memory: Testes que envolvem memória
+    database: Testes que envolvem banco de dados
+    api: Testes que envolvem API
+    security: Testes de segurança
+    performance: Testes de performance
 
 # Configurações de cache
 cache_dir = .pytest_cache
 
-# Configurações de warnings
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::UserWarning 
+# Configurações de timeout
+timeout = 300
+
+# Configurações de filtros
+norecursedirs = 
+    .git
+    .pytest_cache
+    __pycache__
+    *.egg-info
+    .eggs
+    dist
+    build
+    venv
+    .venv
+    env
+    .env
+    node_modules
+    .idea
+    .vscode 
