--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -12,6 +12,7 @@ pytest-benchmark==4.0.0
 pytest-mock==3.12.0
 pytest-env==1.1.3
 pytest-dotenv==0.5.2
+prometheus_client==0.20.0
 
 # Cobertura
 coverage==7.3.2
@@ -41,8 +42,6 @@ toml==0.10.2
 
 # Segurança
 bandit==1.7.5
-safety==2.3.5
-pip-audit==2.6.1
 
 # Linting e Formatação
 pylint==3.0.3
