--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -14,6 +14,12 @@ pytest-env==1.1.3
 pytest-dotenv==0.5.2
 prometheus_client==0.20.0
 
+# Dependências de Runtime
+networkx==3.2.1
+redis==5.0.1
+websockets==12.0
+ujson==5.9.0
+
 # Cobertura
 coverage==7.3.2
 coverage-badge==1.1.0
@@ -49,4 +55,66 @@ black==23.12.1
 isort==5.13.2
 flake8==7.0.0
 mypy==1.8.0
-pydocstyle==6.3.0 
+pydocstyle==6.3.0
+
+# Dependências de Teste
+langchain==0.1.0
+cryptography==42.0.2
+
+# Dependências de Monitoramento
+psutil==5.9.8
+
+# Dependências de Infraestrutura
+networkx==3.2.1
+redis==5.0.1
+websockets==12.0
+ujson==5.9.0
+msgpack==1.0.7
+
+# Dependências de Cobertura
+coverage==7.3.2
+coverage-badge==1.1.0
+
+# Dependências de Relatórios
+pytest-html-reporter==0.2.9
+pytest-metadata==3.1.0
+pytest-reportlog==0.3.0
+pytest-reportportal==5.3.1
+
+# Dependências de Mock e Fixtures
+faker==20.1.0
+freezegun==1.4.0
+responses==0.24.1
+vcrpy==4.2.1
+httpx==0.25.2
+aiohttp==3.9.1
+
+# Dependências de Utilidades
+colorama==0.4.6
+rich==13.7.0
+tqdm==4.66.1
+python-dotenv==1.0.0
+pyyaml==6.0.1
+toml==0.10.2
+
+# Dependências de Segurança
+bandit==1.7.5
+
+# Dependências de Linting
+pylint==3.0.3
+black==23.12.1
+isort==5.13.2
+flake8==7.0.0
+mypy==1.8.0
+pydocstyle==6.3.0
+
+# Dependências de Machine Learning
+scikit-learn==1.4.1.post1
+
+# Dependências de IA
+langchain==0.1.0
+cryptography==42.0.2
+
+# Web e Dados
+flask==3.0.2
+pandas==2.2.1 
