--- a/requirements.txt
+++ b/requirements.txt
@@ -16,17 +16,17 @@ pytest-rerunfailures>=12.0
 pytest-metadata>=3.0.0
 
 # Dependências de monitoramento
-prometheus-client==0.19.0
-elasticsearch==8.10.0
-slack-sdk==3.26.0
-python-dotenv==1.0.0
-pyyaml==6.0.1
+prometheus-client>=0.16.0
+elasticsearch>=8.0.0
+slack-sdk>=3.19.0
+python-dotenv>=1.0.0
+pyyaml>=6.0.0
 requests==2.31.0
-aiohttp==3.9.1
-asyncio==3.4.3
+aiohttp>=3.8.0
+asyncio>=3.4.3
 uvicorn==0.24.0
 fastapi==0.104.1
-pydantic==2.5.2
+pydantic>=2.0.0
 sqlalchemy==2.0.23
 alembic==1.12.1
 psycopg2-binary>=2.9.10
@@ -113,11 +113,14 @@ jupyter==1.0.0
 notebook==7.0.6
 
 # Novas dependências
-psutil>=5.8.0
+psutil>=5.9.0
 schedule>=1.1.0
 
 # Dependências do sistema de autocura
 langchain==0.1.0
 langchain-groq==0.1.0
 langgraph==0.0.15
-groq==0.4.2 
+groq==0.4.2
+
+# Novas dependências
+typing-extensions>=4.5.0 
