Adicionar script `build-images.sh` para automatizar a construção das imagens Docker, incluindo mensagens de status e tratamento de erros. Atualizar os Dockerfiles para utilizar a imagem base `autocura/base:latest` e ajustar as dependências no `Dockerfile.base`, garantindo a instalação correta do `numpy` e outras bibliotecas. Modificar o `requirements.txt` para refletir a versão correta do `numpy` e garantir compatibilidade com as dependências do sistema. Além disso, atualizar o arquivo de workspace do Obsidian para refletir o novo nome do manual. Essas mudanças visam melhorar a modularidade e a clareza no processo de construção das imagens do sistema.

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,24 +1,26 @@
-FROM python:3.10-slim-bullseye
+FROM python:3.10-slim
 
 WORKDIR /app
 
-# Instalar dependências do sistema
+# Instalar dependências do sistema como root
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
-# Copiar requirements
+# Copiar arquivos de requisitos
 COPY requirements.txt .
 
-# Instalar dependências Python
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Configurar usuário não-root
-RUN useradd -m -u 1000 appuser
-USER appuser
+# Instalar dependências em etapas como root
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir numpy==1.24.4 && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Configurar variáveis de ambiente
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PATH="/home/appuser/.local/bin:$PATH" 
+ENV PYTHONPATH=/app \
+    PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1
+
+# Comando padrão
+CMD ["python"] 
