--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ cryptography==41.0.5
 python-multipart==0.0.6
 
 # Processamento de Dados
-numpy==1.26.4
+numpy==1.24.4
 pandas>=1.3.0
 scikit-learn>=1.0.0
 tensorflow-cpu==2.14.0
@@ -117,10 +117,10 @@ psutil>=5.9.0
 schedule>=1.1.0
 
 # Dependências do sistema de autocura
-langchain==0.1.0
-langchain-groq==0.1.0
-langgraph==0.0.15
-groq==0.4.2
+langchain>=0.1.0
+langchain-groq>=0.1.0
+langgraph>=0.0.15
+groq>=0.4.2
 
 # Novas dependências
 typing-extensions>=4.5.0 
