--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,67 @@
-# Dependências principais
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-html==4.1.1
-pytest-xdist==3.3.1
-pytest-timeout==2.2.0
-pytest-mock==3.12.0
-pytest-asyncio==0.21.1
-pytest-env==1.1.3
-pytest-sugar==0.9.7
-pytest-randomly==3.15.0
-pytest-clarity==1.0.1
-pytest-benchmark==4.0.0
-pytest-profiling==1.7.0
-pytest-rerunfailures>=12.0
-pytest-metadata>=3.0.0
+# Core
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pydantic>=1.8.2
+python-dotenv>=0.19.0
+typing-extensions>=3.10.0
 
-# Dependências de monitoramento
-prometheus-client>=0.16.0
-elasticsearch>=8.0.0
-slack-sdk>=3.19.0
-python-dotenv>=1.0.0
-pyyaml>=6.0.0
-requests==2.31.0
-aiohttp>=3.8.0
-asyncio>=3.4.3
-uvicorn==0.24.0
-fastapi==0.104.1
-pydantic>=2.0.0
-sqlalchemy==2.0.23
-alembic==1.12.1
-psycopg2-binary>=2.9.10
-redis==5.0.1
-celery==5.3.6
-flower==2.0.1
-sentry-sdk==1.35.0
-python-json-logger==2.0.7
-structlog==23.2.0
-loguru==0.7.2
+# Monitoramento
+prometheus-client>=0.11.0
+opentelemetry-api>=1.7.1
+opentelemetry-sdk>=1.7.1
+opentelemetry-instrumentation-fastapi>=0.27b0
+
+# Diagnóstico
+scikit-learn>=0.24.2
+pandas>=1.3.3
+numpy>=1.21.2
+tensorflow>=2.6.0
+
+# Gerador de Ações
+langchain>=0.0.200
+groq>=0.3.0
+openai>=0.27.0
+
+# Integração
+pika>=1.2.0
+redis>=3.5.3
+sqlalchemy>=1.4.23
+
+# Observabilidade
+jaeger-client>=4.7.0
+elasticsearch>=7.15.0
+kibana>=7.15.0
+
+# Guardião Cognitivo
+torch>=1.9.0
+transformers>=4.11.3
+sentence-transformers>=2.1.0
+
+# Ética
+fairlearn>=0.7.0
+shap>=0.40.0
+lime>=0.2.0
+
+# Testes
+pytest>=6.2.5
+pytest-cov>=2.12.1
+pytest-asyncio>=0.15.1
+pytest-mock>=3.6.1
+
+# Docker
+docker>=5.0.0
+docker-compose>=1.29.2
+
+# Deployment
+kubernetes>=12.0.1
+helm>=0.12.0
+
+# Utilitários
+python-jose>=3.3.0
+passlib>=1.7.4
+python-multipart>=0.0.5
+aiofiles>=0.7.0
+tenacity>=8.0.1
 
 # Dependências de desenvolvimento
 black==23.11.0
@@ -57,43 +82,8 @@ mkdocs-git-revision-date-localized-plugin==1.2.0
 mkdocs-git-authors-plugin==0.7.0
 mkdocs-gitbook==0.0.1
 
-# Monitoramento e Observabilidade
-opentelemetry-api==1.21.0
-opentelemetry-sdk==1.21.0
-opentelemetry-instrumentation-fastapi==0.42b0
-
-# Segurança
-python-jose==3.3.0
-passlib==1.7.4
-bcrypt==4.0.1
-cryptography==41.0.5
-python-multipart==0.0.6
-
-# Processamento de Dados
-numpy==1.24.4
-pandas>=1.3.0
-scikit-learn>=1.0.0
-tensorflow-cpu==2.14.0
-torch==2.1.1
-
-# Documentação
-mkdocs-material==9.4.14
-mkdocstrings==0.23.0
-mkdocstrings-python==1.7.1
-
-# Utilitários
-python-dateutil==2.8.2
-pytz>=2021.1
-beautifulsoup4==4.12.2
-lxml==4.9.3
-pillow==8.4.0
-
 # Notificações
 python-telegram-bot>=13.7
-
-# Kubernetes
-kubernetes==28.1.0
-kopf==1.36.0
 
 # Logging
 structlog>=23.1.0
@@ -104,7 +94,6 @@ cachetools==5.3.2
 
 # Validação Ética
 ethicml==0.3.0
-fairlearn==0.9.0
 aif360==0.5.0
 
 # Desenvolvimento
@@ -117,10 +106,38 @@ psutil>=5.9.0
 schedule>=1.1.0
 
 # Dependências do sistema de autocura
-langchain>=0.1.0
 langchain-groq>=0.1.0
 langgraph>=0.0.15
-groq>=0.4.2
+
+# Novas dependências
+pytest-clarity==1.0.1
+pytest-benchmark==4.0.0
+pytest-profiling==1.7.0
+pytest-rerunfailures>=12.0
+pytest-metadata>=3.0.0
+pytest-sugar==0.9.7
+pytest-randomly==3.15.0
+
+# Dependências de monitoramento
+slack-sdk>=3.19.0
+pyyaml>=6.0.0
+requests==2.31.0
+aiohttp>=3.8.0
+asyncio>=3.4.3
+
+# Celery
+celery==5.3.6
+flower==2.0.1
+sentry-sdk==1.35.0
+python-json-logger==2.0.7
+structlog==23.2.0
+loguru==0.7.2
+
+# Novas dependências
+schedule>=1.1.0
+
+# Dependências do sistema de autocura
+langchain>=0.1.0
 
 # Novas dependências
 typing-extensions>=4.5.0 
