Atualizar o arquivo `memoria_compartilhada.json` com o status de desenvolvimento e detalhes dos componentes, incluindo a implementação do módulo de auditoria ética e correções no tratamento de timestamps. Adicionar novos passos para integração com Grafana e alertas éticos, além de melhorias na documentação do sistema. Essas ações visam aprimorar a organização, a transparência e a funcionalidade do sistema AutoCura.

--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -3,11 +3,25 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: 'autocura'
+  - job_name: 'monitor'
     static_configs:
-      - targets: ['autocura:9090']
+      - targets: ['monitor:9090']
     metrics_path: '/metrics'
-    scheme: 'http'
+
+  - job_name: 'observador'
+    static_configs:
+      - targets: ['observador:8080']
+    metrics_path: '/metrics'
+
+  - job_name: 'validador'
+    static_configs:
+      - targets: ['validador:8080']
+    metrics_path: '/metrics'
+
+  - job_name: 'guardiao'
+    static_configs:
+      - targets: ['guardiao:8080']
+    metrics_path: '/metrics'
 
   - job_name: 'prometheus'
     static_configs:
