--- a/docker/Dockerfile.validador
+++ b/docker/Dockerfile.validador
@@ -1,9 +1,32 @@
-FROM autocura-base:latest
+# Imagem base
+FROM python:3.10-slim
 
-# Copiar código fonte
-COPY src/etica /app/etica
+# Define diretório de trabalho
+WORKDIR /app
+
+# Instala dependências do sistema
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copia arquivos de dependências
+COPY requirements.txt .
+
+# Instala dependências Python
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copia código fonte
 COPY src/core /app/core
-COPY src/memoria /app/memoria
+COPY src/utils /app/utils
+COPY src/seguranca /app/seguranca
 
-# Comando para iniciar o validador
-CMD ["python", "-m", "etica.validador"] 
+# Cria diretórios necessários
+RUN mkdir -p logs data
+
+# Define variáveis de ambiente
+ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
+
+# Comando para executar o módulo
+CMD ["python", "-m", "seguranca.validador.main"] 
